<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Determinar">


    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30sp"
        android:text="@string/tvTitulo2"
        android:textAlignment="viewStart"
        android:textColor="#0B0808"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Edad"
        android:layout_width="407dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/Edad"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/EnviarDatos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EnviarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="15dp"
        android:text="@string/EnviarDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edad" />

    <Button
        android:id="@+id/Regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="13dp"
        android:text="@string/Regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnviarDatos" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="218dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Regresar"
        app:srcCompat="@drawable/mayor" />

</androidx.constraintlayout.widget.ConstraintLayout>