<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tvTitulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="387dp"
        android:layout_height="52dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/etApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="391dp"
        android:layout_height="57dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/etApellido"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/btEnviarDatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btEnviarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="304dp"
        android:text="@string/btEnviarDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellido" />

    <Button
        android:id="@+id/Siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="35dp"
        android:text="@string/Siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEnviarDatos" />
</androidx.constraintlayout.widget.ConstraintLayout>